--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "analyze:client": "( cd client && npm run analyze )",
     "unit": "npm-run-all --parallel unit:admin unit:bot unit:client unit:function unit:server unit:worker",
     "unit:admin": "taito run: admin -- npm run unit",
-    "unit:bot": "taito run: bot -- npm run unit",
+    "unit:bot": "echo TODO unit:bot",
     "unit:client": "taito run: client -- npm run unit",
-    "unit:function": "taito run: function -- npm run unit",
+    "unit:function": "echo TODO unit:function",
     "unit:server": "taito run: server -- npm run unit",
     "unit:worker": "echo TODO unit:worker",
     "test": "npm-run-all --parallel test:admin test:bot test:client test:function test:server test:worker",
-    "test:admin": "taito util-test:${taito_env} admin ${taito_app_url} ${test_api_user}",
-    "test:bot": "taito util-test:${taito_env} bot ${taito_app_url} ${test_api_user}",
-    "test:client": "taito util-test:${taito_env} client ${taito_app_url} ${test_api_user}",
-    "test:function": "taito util-test:${taito_env} function ${taito_app_url} ${test_api_user}",
-    "test:server": "taito util-test:${taito_env} server ${taito_app_url} ${test_api_user}",
+    "test:admin": "taito -v util-test:${taito_env} admin ${taito_app_url} ${test_api_user}",
+    "test:bot": "echo TODO test:bot",
+    "test:client": "taito -v util-test:${taito_env} client ${taito_app_url} ${test_api_user}",
+    "test:function": "echo TODO test:function",
+    "test:server": "taito -v util-test:${taito_env} server ${taito_app_url} ${test_api_user}",
     "test:worker": "echo TODO test:worker",
     "info:local": "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json (username/password)'",
     "info:dev": "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json (username/password)'",
