--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,5 @@
-# TODO: use multi-stage dockerfile also locally?
+# Builder, tester and runtime container for local development
+
 FROM node:8.7-alpine
 ENV NODE_ENV development
 RUN apk add --update-cache build-base python git fontconfig
