--- a/worker/Dockerfile.build
+++ b/worker/Dockerfile.build
@@ -1,4 +1,4 @@
-# Builder
+# Builder and tester container for production build
 FROM node:8.7-alpine as builder
 ARG TARGET_ENV=prod
 ENV TARGET_ENV ${TARGET_ENV}
