--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "unit:server": "taito run: server -- npm run unit",
     "unit:worker": "echo TODO unit:worker",
     "test": "npm-run-all --parallel test:admin test:bot test:client test:function test:server test:worker",
-    "test:admin": "taito -v util-test:${taito_env} admin ${taito_app_url} ${test_api_user}",
+    "test:admin": "taito util-test:${taito_env} admin ${taito_app_url} ${test_api_user}",
     "test:bot": "echo TODO test:bot",
-    "test:client": "taito -v util-test:${taito_env} client ${taito_app_url} ${test_api_user}",
+    "test:client": "taito util-test:${taito_env} client ${taito_app_url} ${test_api_user}",
     "test:function": "echo TODO test:function",
-    "test:server": "taito -v util-test:${taito_env} server ${taito_app_url} ${test_api_user}",
+    "test:server": "taito util-test:${taito_env} server ${taito_app_url} ${test_api_user}",
     "test:worker": "echo TODO test:worker",
     "info:local": "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json (username/password)'",
     "info:dev": "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json (username/password)'",
