--- a/package.json
+++ b/package.json
@@ -41,15 +41,16 @@
     "info:prod": "TODO",
     "taito-init:local:clean": "taito -z init --clean && npm run clean:storage",
     "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
-    "scan": "npm run lint && npm run flow && echo 'TODO: code analysis'",
-    "flow": "echo DISABLED flow",
+    "scan": "npm run lint && npm run disabled-flow && echo 'TODO: code analysis'",
+    "flow": "flow",
+    "disabled-flow": "echo flow disabled",
     "docs": "echo TODO: generate docs in package.json",
     "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
     "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
     "precommit": "echo 'NOTE: Running precommit inside taito container' && echo taito taito-precommit",
     "prepush": "echo 'NOTE: Running prepush inside taito container' && echo taito taito-prepush",
     "taito-precommit": "echo 'SKIP: Skip linting on commit since we are already continuously linting during development.'",
-    "taito-prepush": "npm-run-all --parallel lint flow unit",
+    "taito-prepush": "npm-run-all --parallel lint disabled-flow unit",
     "commit": "echo 'Running commitizen locally' && git-cz",
     "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
     "ci-release-pre:prod": "semantic-release pre",
