--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "koa": "^2.0.0-alpha.3",
     "koa-basic-auth": "^2.0.0",
     "koa-better-body": "^3.0.0",
+    "koa-body-parsers": "^3.1.0",
     "koa-bunyan-logger": "^1.3.0",
     "koa-cache-control": "^1.0.0",
     "koa-convert": "^1.2.0",
