chore: Removed lint libs from root and made dockerfiles cache friendly

--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -15,14 +15,13 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /admin
-COPY . /admin
+COPY ./package.json /admin/package.json
+COPY ./package-lock.json /admin/package-lock.json
 RUN npm install --loglevel warn
-# NOTE: postinstall fails in previous step because of root user so we run it manually
-RUN npm run postinstall
+RUN npm run flow-install
+COPY . /admin
 RUN npm run unit
 RUN npm run build && cp -r ./assets/* /build/
-EXPOSE 3334
-CMD ["npm", "run", "start"]
 
 # Production runtime
 FROM nginx:1.13.5-alpine
