--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "description": "",
   "private": true,
   "scripts": {
+    "install-dev": "echo '# Installing all libraries on host for code editor support! TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
     "install-all": "npm-run-all install-all:admin install-all:bot install-all:client install-all:function install-all:server install-all:worker",
-    "install-all:admin": "cd admin && npm install",
-    "install-all:bot": "cd bot && npm install",
-    "install-all:client": "cd client && npm install",
-    "install-all:function": "cd function && npm install",
-    "install-all:server": "cd server && npm install",
-    "install-all:worker": "cd worker && npm install",
+    "install-all:admin": "cd admin && npm install && npm run flow-install",
+    "install-all:bot": "cd bot && npm install && npm run flow-install",
+    "install-all:client": "cd client && npm install && npm run flow-install",
+    "install-all:function": "cd function && npm install && npm run flow-install",
+    "install-all:server": "cd server && npm install && npm run flow-install",
+    "install-all:worker": "cd worker && npm install && npm run flow-install",
     "lint": "npm-run-all --parallel lint:admin lint:bot lint:client lint:function lint:server lint:worker",
-    "lint:admin": "eslint ./admin --ignore-path ./admin/.eslintignore --quiet",
-    "lint:bot": "eslint ./bot --ignore-path ./bot/.eslintignore --quiet",
-    "lint:client": "eslint ./client --ignore-path ./client/.eslintignore --quiet",
-    "lint:function": "eslint ./function --ignore-path ./function/.eslintignore --quiet",
-    "lint:server": "eslint ./server --ignore-path ./server/.eslintignore --quiet",
-    "lint:worker": "echo TODO lint:worker",
+    "lint:admin": "cd admin && npm run lint",
+    "lint:bot": "cd bot && npm run lint",
+    "lint:client": "cd client && npm run lint",
+    "lint:function": "cd function && npm run lint",
+    "lint:server": "cd server && npm run lint",
+    "lint:worker": "cd worker && npm run lint",
     "analyze": "npm-run-all --parallel analyze:admin analyze:client",
-    "analyze:admin": "( cd admin && npm run analyze )",
-    "analyze:client": "( cd client && npm run analyze )",
+    "analyze:admin": "cd admin && npm run analyze",
+    "analyze:client": "cd client && npm run analyze",
     "unit": "npm-run-all --parallel unit:admin unit:bot unit:client unit:function unit:server unit:worker",
     "unit:admin": "taito run: admin -- npm run unit",
     "unit:bot": "echo TODO unit:bot",
@@ -41,15 +42,14 @@
     "info:prod": "TODO",
     "taito-init:local:clean": "taito -z init --clean && npm run clean:storage",
     "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
-    "scan": "npm run lint && npm run disabled-flow && echo 'TODO: code analysis'",
+    "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
     "flow": "flow",
-    "disabled-flow": "echo flow disabled",
+    "disabled-flow": "echo flow disabled on prepush",
     "docs": "echo TODO: generate docs in package.json",
     "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
     "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
-    "precommit": "echo 'NOTE: Running precommit inside taito container' && echo taito taito-precommit",
+    "precommit": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "prepush": "echo 'NOTE: Running prepush inside taito container' && echo taito taito-prepush",
-    "taito-precommit": "echo 'SKIP: Skip linting on commit since we are already continuously linting during development.'",
     "taito-prepush": "npm-run-all --parallel lint disabled-flow unit",
     "commit": "echo 'Running commitizen locally' && git-cz",
     "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
@@ -120,25 +120,12 @@
   "license": "MIT",
   "homepage": "https://github.com/TaitoUnited/server-template#readme",
   "devDependencies": {
-    "babel-eslint": "^6.1.0",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-config-airbnb-base": "11.1.2",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-prettier": "^2.1.2",
-    "eslint-plugin-react": "^7.0.0",
     "flow-bin": "^0.66.0",
     "husky": "^0.14.3",
     "last-release-git": "0.0.3",
     "npm-run-all": "^4.0.2",
-    "prettier": "^1.8.1",
-    "pump": "^3.0.0",
     "semantic-release": "^8.1.2",
     "validate-commit-msg": "^2.14.0"
   }
