--- a/admin/package.json
+++ b/admin/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "postinstall": "flow-typed install",
+    "flow-install": "flow-typed install",
     "flow": "flow",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "BABEL_ENV=test jest",
@@ -84,6 +84,7 @@
     "jest": "^20.0.0",
     "json-loader": "^0.5.7",
     "postcss-loader": "^2.0.6",
+    "prettier": "^1.8.1",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
