--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "postinstall": "flow-typed install",
+    "flow-install": "flow-typed install",
     "flow": "flow",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "BABEL_ENV=test jest",
@@ -86,6 +86,7 @@
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.1.1",
     "postcss-loader": "^2.0.7",
+    "prettier": "^1.8.1",
     "react-hot-loader": "^3.0.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
