--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,10 +8,11 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /server
-COPY . /server
 RUN npm install nodemon -g
+COPY ./package.json /server/package.json
+COPY ./package-lock.json /server/package-lock.json
 RUN npm install --loglevel warn
-# NOTE: postinstall fails in previous step because of root user so we run it manually
-RUN npm run postinstall
+RUN npm run flow-install
+COPY . /server
 EXPOSE 3332
 CMD ["npm", "run", "start"]
