--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -10,10 +10,12 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /server
-COPY . /server
+COPY ./package.json /server/package.json
+COPY ./package-lock.json /server/package-lock.json
 RUN npm install --loglevel warn
-# NOTE: postinstall fails in previous step because of root user so we run it manually
-RUN npm run postinstall
+RUN npm run flow-install
+COPY . /server
+RUN npm run lint
 RUN npm run flow
 RUN npm run unit
 RUN npm run build:prod
