--- a/worker/Dockerfile.build
+++ b/worker/Dockerfile.build
@@ -7,6 +7,7 @@ RUN apk add --update-cache build-base python git fontconfig
 WORKDIR /worker
 COPY ./package.json /worker/package.json
 COPY ./package-lock.json /worker/package-lock.json
+COPY ./.flowconfig /worker/.flowconfig
 RUN npm install --loglevel warn
 RUN npm run flow-install
 COPY . /worker
