--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -12,6 +12,7 @@ RUN apk --no-cache add ca-certificates wget && \
 WORKDIR /server
 COPY ./package.json /server/package.json
 COPY ./package-lock.json /server/package-lock.json
+COPY ./.flowconfig /server/.flowconfig
 RUN npm install --loglevel warn
 RUN npm run flow-install
 COPY . /server
