--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "flow-install": "flow-typed install",
     "flow": "flow",
+    "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "echo 'TODO run unit tests'",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan -l debug",
