--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -14,10 +14,10 @@ COPY ./package.json /server/package.json
 COPY ./package-lock.json /server/package-lock.json
 COPY ./.flowconfig /server/.flowconfig
 RUN npm install --loglevel warn
-RUN npm run flow-install
+# RUN npm run flow-install
 COPY . /server
 RUN npm run lint
-RUN npm run flow
+# RUN npm run flow
 RUN npm run unit
 RUN npm run build:prod
 
