--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 images: [
-  'eu.gcr.io/$PROJECT_ID/$REPO_NAME/admin:$COMMIT_SHA',
-  'eu.gcr.io/$PROJECT_ID/$REPO_NAME/client:$COMMIT_SHA',
-  'eu.gcr.io/$PROJECT_ID/$REPO_NAME/server:$COMMIT_SHA'
+  'eu.gcr.io/$PROJECT_ID/$REPO_NAME/admin:latest',
+  'eu.gcr.io/$PROJECT_ID/$REPO_NAME/client:latest',
+  'eu.gcr.io/$PROJECT_ID/$REPO_NAME/server:latest'
 ]
 
 timeout: 1500s
