--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -11,4 +11,4 @@ RUN npm install --loglevel warn
 RUN npm run flow-install
 COPY . /worker
 EXPOSE 3332
-CMD ["npm", "run", "start"]
+CMD npm install; npm run flow-install; npm run start
