--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -19,7 +19,7 @@ COPY ./package.json /client/package.json
 COPY ./package-lock.json /client/package-lock.json
 COPY ./.flowconfig /client/.flowconfig
 RUN npm install --loglevel warn
-RUN npm run flow-install
+RUN npm run types-install
 COPY . /client
 RUN npm run unit
 RUN npm run build && cp -r ./assets/* /build/
