--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "install-ci": "echo '# No additional dependencies need to be installed in ci mode'",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
     "install-all": "npm-run-all install-all:admin install-all:bot install-all:client install-all:function install-all:server install-all:worker",
-    "install-all:admin": "cd admin && npm install && npm run flow-install",
-    "install-all:bot": "cd bot && npm install && npm run flow-install",
-    "install-all:client": "cd client && npm install && npm run flow-install",
-    "install-all:function": "cd function && npm install && npm run flow-install",
-    "install-all:server": "cd server && npm install && npm run flow-install",
-    "install-all:worker": "cd worker && npm install && npm run flow-install",
+    "install-all:admin": "cd admin && npm install && npm run types-install",
+    "install-all:bot": "cd bot && npm install && npm run types-install",
+    "install-all:client": "cd client && npm install && npm run types-install",
+    "install-all:function": "cd function && npm install && npm run types-install",
+    "install-all:server": "cd server && npm install && npm run types-install",
+    "install-all:worker": "cd worker && npm install && npm run types-install",
     "lint": "npm-run-all --parallel lint:admin lint:bot lint:client lint:function lint:server lint:worker",
     "lint:admin": "cd admin && npm run lint",
     "lint:bot": "cd bot && npm run lint",
@@ -44,14 +44,14 @@
     "taito-init:local:clean": "taito -z init --clean && npm run clean:storage",
     "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
     "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
-    "flow": "flow",
-    "disabled-flow": "echo flow disabled on prepush",
+    "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
+    "disabled-types": "echo flow/typescript check disabled on prepush",
     "docs": "echo TODO: generate docs in package.json",
     "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
     "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
     "precommit": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "prepush": "echo 'NOTE: Running prepush inside taito container' && echo taito taito-prepush",
-    "taito-prepush": "npm-run-all --parallel lint disabled-flow unit",
+    "taito-prepush": "npm-run-all --parallel lint disabled-types unit",
     "commit": "echo 'Running commitizen locally' && git-cz",
     "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
     "ci-release-pre:prod": "semantic-release pre",
