--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -19,7 +19,7 @@ COPY ./package.json /admin/package.json
 COPY ./package-lock.json /admin/package-lock.json
 COPY ./.flowconfig /admin/.flowconfig
 RUN npm install --loglevel warn
-RUN npm run flow-install
+RUN npm run types-install
 COPY . /admin
 RUN npm run unit
 RUN npm run build && cp -r ./assets/* /build/
