--- a/admin/package.json
+++ b/admin/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "flow-install": "flow-typed install",
-    "flow": "flow",
+    "types-install": "if [ -f .flowconfig ]; then echo flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
+    "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "BABEL_ENV=test jest",
     "start": "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080/admin/sockjs-node/",
