--- a/worker/Dockerfile.build
+++ b/worker/Dockerfile.build
@@ -9,10 +9,10 @@ COPY ./package.json /worker/package.json
 COPY ./package-lock.json /worker/package-lock.json
 COPY ./.flowconfig /worker/.flowconfig
 RUN npm install --loglevel warn
-RUN npm run flow-install
+RUN npm run types-install
 COPY . /worker
 RUN npm run lint
-RUN npm run flow
+RUN npm run types
 RUN npm run unit
 RUN npm run build:prod
 
