feat: Use 'text' logging format in development

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,6 +78,7 @@ server-template-server:
   environment:
     COMMON_ENV: local
     COMMON_DEBUG: 'true'
+    COMMON_LOG_FORMAT: text
     COMMON_PROJECT: server-template
     COMMON_COMPANY: companyname
     NODE_ENV: development
