--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,8 @@
 {
   "name": "server-template-client",
-  "version": "1.0.0",
-  "description": "server-template for webapps",
-  "private": true,
   "main": "index.js",
   "scripts": {
-    "types-install": "if [ -f .flowconfig ]; then echo flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
+    "types-install": "if [ -f .flowconfig ]; then flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "BABEL_ENV=test jest",
@@ -18,17 +15,6 @@
       "./config/setup-jest.js"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com:TaitoUnited/server-template.git"
-  },
-  "author": "Taito United Oy <support@taitounited.fi>",
-  "license": "",
-  "bugs": {
-    "url": "https://github.com/TaitoUnited/server-template/issues"
-  },
-  "homepage": "https://github.com/TaitoUnited/server-template#readme",
-  "_comment": "TODO remove unused dependencies",
   "dependencies": {
     "axios": "^0.16.2",
     "babel-polyfill": "^6.26.0",
@@ -52,14 +38,13 @@
     "redux-saga": "^0.15.6",
     "styled-components": "^2.2.1"
   },
-  "_TODO": "use babel-preset-env!!!",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-react-transform": "^3.0.0",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-styled-components": "^1.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
@@ -71,12 +56,12 @@
     "eslint-config-airbnb": "14.1.0",
     "eslint-config-airbnb-base": "11.1.2",
     "eslint-config-prettier": "^2.3.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.0.0",
+    "eslint-loader": "^1.9.0",
     "file-loader": "^1.1.5",
     "flow-bin": "^0.66.0",
     "flow-typed": "^2.3.0",
@@ -84,7 +69,6 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.0.2",
     "json-loader": "^0.5.7",
-    "npm-run-all": "^4.1.1",
     "postcss-loader": "^2.0.7",
     "prettier": "^1.8.1",
     "react-hot-loader": "^3.0.0",
