--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "name": "server-template",
-  "description": "",
-  "private": true,
   "scripts": {
     "install-ci": "echo '# No additional dependencies need to be installed in ci mode'",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
@@ -12,6 +10,13 @@
     "install-all:function": "cd function && npm install && npm run types-install",
     "install-all:server": "cd server && npm install && npm run types-install",
     "install-all:worker": "cd worker && npm install && npm run types-install",
+    "taito-init:local:clean": "taito -z init --clean && npm run clean:storage",
+    "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
+    "info:local": "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json (username/password)'",
+    "info:dev": "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json (username/password)'",
+    "info:test": "taito secrets:test | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add test users to package.json (username/password)'",
+    "info:staging": "TODO",
+    "info:prod": "TODO",
     "lint": "npm-run-all --parallel lint:admin lint:bot lint:client lint:function lint:server lint:worker",
     "lint:admin": "cd admin && npm run lint",
     "lint:bot": "cd bot && npm run lint",
@@ -19,9 +24,6 @@
     "lint:function": "cd function && npm run lint",
     "lint:server": "cd server && npm run lint",
     "lint:worker": "cd worker && npm run lint",
-    "analyze": "npm-run-all --parallel analyze:admin analyze:client",
-    "analyze:admin": "cd admin && npm run analyze",
-    "analyze:client": "cd client && npm run analyze",
     "unit": "npm-run-all --parallel unit:admin unit:bot unit:client unit:function unit:server unit:worker",
     "unit:admin": "taito run: admin -- npm run unit",
     "unit:bot": "echo TODO unit:bot",
@@ -30,30 +32,26 @@
     "unit:server": "taito run: server -- npm run unit",
     "unit:worker": "echo TODO unit:worker",
     "test": "npm-run-all --parallel test:admin test:bot test:client test:function test:server test:worker",
-    "test:admin": "taito util-test:${taito_env} admin ${taito_app_url} ${test_api_user}",
+    "test:admin": "taito util-test:${taito_env} admin",
     "test:bot": "echo TODO test:bot",
-    "test:client": "taito util-test:${taito_env} client ${taito_app_url} ${test_api_user}",
+    "test:client": "taito util-test:${taito_env} client",
     "test:function": "echo TODO test:function",
-    "test:server": "taito util-test:${taito_env} server ${taito_app_url} ${test_api_user}",
+    "test:server": "taito util-test:${taito_env} server",
     "test:worker": "echo TODO test:worker",
-    "info:local": "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json (username/password)'",
-    "info:dev": "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json (username/password)'",
-    "info:test": "taito secrets:test | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add test users to package.json (username/password)'",
-    "info:staging": "TODO",
-    "info:prod": "TODO",
-    "taito-init:local:clean": "taito -z init --clean && npm run clean:storage",
-    "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
-    "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
-    "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
-    "disabled-types": "echo flow/typescript check disabled on prepush",
-    "docs": "echo TODO: generate docs in package.json",
+    "analyze": "npm-run-all --parallel analyze:admin analyze:client",
+    "analyze:admin": "cd admin && npm run analyze",
+    "analyze:client": "cd client && npm run analyze",
     "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
     "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
+    "docs": "echo TODO: generate docs in package.json",
+    "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
+    "commit": "echo 'Running commitizen locally' && git-cz",
+    "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
     "precommit": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "prepush": "echo 'NOTE: Running prepush inside taito container' && echo taito taito-prepush",
     "taito-prepush": "npm-run-all --parallel lint disabled-types unit",
-    "commit": "echo 'Running commitizen locally' && git-cz",
-    "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
+    "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
+    "disabled-types": "echo flow/typescript check disabled on prepush",
     "ci-release-pre:prod": "semantic-release pre",
     "ci-release-post:prod": "semantic-release post"
   },
@@ -99,27 +97,6 @@
       "path": "./node_modules/semantic-release/src/lib/plugin-noop.js"
     }
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com:TaitoUnited/server-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/TaitoUnited/server-template/issues"
-  },
-  "keywords": [
-    "orig-template",
-    "server-template",
-    "companyname",
-    "wepapp",
-    "react",
-    "node.js",
-    "redis",
-    "postgres",
-    "s3"
-  ],
-  "author": "Taito United <support@taitounited.fi>",
-  "license": "MIT",
-  "homepage": "https://github.com/TaitoUnited/server-template#readme",
   "devDependencies": {
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
