--- a/server/package.json
+++ b/server/package.json
@@ -1,126 +1,64 @@
 {
   "name": "server-template-server",
-  "version": "1.0.0",
-  "description": "server-template-server API",
   "main": "index.js",
-  "private": true,
   "scripts": {
-    "types-install": "if [ -f .flowconfig ]; then echo flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
+    "types-install": "if [ -f .flowconfig ]; then flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "echo 'TODO run unit tests'",
+    "test": "mocha --require babel-core/register test/*.js",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan -l debug",
     "start:dev:trace": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan",
     "start:prod": "NODE_ENV=production nodemon -L ./index.production.js",
     "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules .",
-    "build:docs": "grunt --gruntfile ./Gruntfile swagger-docs --force"
+    "docs": "grunt --gruntfile ./Gruntfile swagger-docs --force"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com:TaitoUnited/server-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/TaitoUnited/server-template/issues"
-  },
-  "keywords": [
-    "koa2",
-    "leiko"
-  ],
-  "author": "Taito United Oy <support@taitounited.fi>",
-  "license": "",
-  "homepage": "https://github.com/TaitoUnited/server-template#readme",
   "dependencies": {
-    "JSONPath": "^0.11.2",
-    "async-busboy": "^0.3.2",
-    "aws-promised": "^2.13.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-runtime": "^6.9.2",
-    "bluebird": "^3.4.3",
-    "boom": "^3.1.2",
-    "bunyan": "^1.5.1",
-    "continuation-local-storage": "^3.1.7",
-    "fs-promise": "^1.0.0",
-    "handlebars": "^4.0.6",
-    "html-pdf": "^2.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jayschema": "^0.3.1",
-    "json-schema-deref-sync": "^0.3.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "boom": "^7.1.1",
+    "bunyan": "^1.8.12",
+    "continuation-local-storage": "^3.2.1",
     "jsonwebtoken": "^7.2.1",
-    "kcors": "^2.0.0",
-    "koa": "^2.0.0-alpha.3",
+    "jwks-rsa": "^1.2.1",
+    "koa": "^2.4.1",
     "koa-basic-auth": "^2.0.0",
-    "koa-better-body": "^3.0.0",
+    "koa-better-body": "^3.0.4",
     "koa-body-parsers": "^3.1.0",
-    "koa-bunyan-logger": "^1.3.0",
-    "koa-cache-control": "^1.0.0",
+    "koa-cache-control": "^2.0.0",
     "koa-convert": "^1.2.0",
-    "koa-jwt": "^1.2.0",
-    "koa-mount": "^1.3.0",
-    "koa-onerror": "^1.2.1",
-    "koa-proxy": "^0.6.0",
-    "koa-qs": "^2.0.0",
-    "koa-request": "^1.0.0",
-    "koa-router": "^7.0.1",
-    "koa-session2": "^1.0.8",
-    "koa-socket": "^4.4.0",
-    "kue": "^0.11.5",
-    "legit": "0.0.5",
-    "lodash": "^4.15.0",
-    "lru-cache": "^4.0.0",
-    "moment": "^2.12.0",
-    "moment-timezone": "^0.5.4",
-    "pg-monitor": "^0.5.11",
-    "pg-promise": "^5.3.2",
-    "phantom": "^4.0.0",
-    "qs": "^6.1.0",
-    "raven": "^2.0.2",
-    "request": "^2.74.0",
-    "request-promise": "^4.1.1",
-    "routington": "^1.0.3",
-    "sendgrid": "^2.0.0",
-    "socket.io-emitter": "^2.0.0",
-    "socket.io-redis": "^3.1.0",
-    "socketio-jwt": "^4.5.0",
+    "koa-jwt": "^3.3.0",
+    "koa-router": "^7.3.0",
+    "lodash": "^4.17.4",
+    "pg-promise": "^7.4.0",
+    "raven": "^2.4.0",
+    "request-promise-native": "^1.0.5",
     "swagger-injector": "^1.2.0",
-    "uuid": "^3.0.1",
-    "validator": "^5.2.0",
-    "xlsx": "^0.8.1",
-    "xlsx-writestream": "^0.4.0",
-    "xml2js": "^0.4.17"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.1.0",
-    "babel-plugin-syntax-async-functions": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-plugin-transform-regenerator": "^6.9.0",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015-node4": "^2.1.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-3": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "babel-types": "^6.9.1",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-config-airbnb-base": "11.1.2",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "2.2.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.1.2",
     "flow-bin": "^0.66.0",
     "flow-typed": "^2.3.0",
     "grunt": "^1.0.1",
     "grunt-swagger-docs": "^0.0.4",
-    "mocha": "^2.4.5",
-    "mocha-jenkins-reporter": "^0.2.2",
-    "nodemon": "^1.8.1",
-    "prettier": "^1.8.1",
-    "should": "^8.3.2",
-    "supertest": "^1.2.0"
+    "mocha": "^5.0.0",
+    "nodemon": "^1.14.11",
+    "prettier": "^1.11.1"
   }
 }
