--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules .",
     "docs": "grunt --gruntfile ./Gruntfile swagger-docs --force"
   },
+  "_comment": "TODO upgrade koa-jwt. the latest breaks determineAuthMethod()",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
@@ -25,10 +26,9 @@
     "koa": "^2.4.1",
     "koa-basic-auth": "^2.0.0",
     "koa-better-body": "^3.0.4",
-    "koa-body-parsers": "^3.1.0",
     "koa-cache-control": "^2.0.0",
     "koa-convert": "^1.2.0",
-    "koa-jwt": "^3.3.0",
+    "koa-jwt": "^1.2.0",
     "koa-router": "^7.3.0",
     "lodash": "^4.17.4",
     "pg-promise": "^7.4.0",
