refactor: Moved function to server-template-alt

--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "scripts": {
     "install-ci": "echo '# No additional dependencies need to be installed in ci mode'",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
-    "install-all": "npm-run-all install-all:admin install-all:bot install-all:client install-all:function install-all:server install-all:worker",
+    "install-all": "npm-run-all install-all:admin install-all:bot install-all:client install-all:server install-all:worker",
     "install-all:admin": "cd admin && npm install && npm run types-install",
     "install-all:bot": "cd bot && npm install && npm run types-install",
     "install-all:client": "cd client && npm install && npm run types-install",
-    "install-all:function": "cd function && npm install && npm run types-install",
     "install-all:server": "cd server && npm install && npm run types-install",
     "install-all:worker": "cd worker && npm install && npm run types-install",
     "taito-init:local:clean": "taito -z init --clean && npm run clean:storage",
@@ -17,25 +16,22 @@
     "info:test": "taito secrets:test | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add test users to package.json (username/password)'",
     "info:staging": "TODO",
     "info:prod": "TODO",
-    "lint": "npm-run-all --parallel lint:admin lint:bot lint:client lint:function lint:server lint:worker",
+    "lint": "npm-run-all --parallel lint:admin lint:bot lint:client lint:server lint:worker",
     "lint:admin": "cd admin && npm run lint",
     "lint:bot": "cd bot && npm run lint",
     "lint:client": "cd client && npm run lint",
-    "lint:function": "cd function && npm run lint",
     "lint:server": "cd server && npm run lint",
     "lint:worker": "cd worker && npm run lint",
-    "unit": "npm-run-all --parallel unit:admin unit:bot unit:client unit:function unit:server unit:worker",
+    "unit": "npm-run-all --parallel unit:admin unit:bot unit:client unit:server unit:worker",
     "unit:admin": "taito run: admin -- npm run unit",
     "unit:bot": "echo TODO unit:bot",
     "unit:client": "taito run: client -- npm run unit",
-    "unit:function": "echo TODO unit:function",
     "unit:server": "taito run: server -- npm run unit",
     "unit:worker": "echo TODO unit:worker",
-    "test": "npm-run-all --parallel test:admin test:bot test:client test:function test:server test:worker",
+    "test": "npm-run-all --parallel test:admin test:bot test:client test:server test:worker",
     "test:admin": "taito util-test:${taito_env} admin",
     "test:bot": "echo TODO test:bot",
     "test:client": "taito util-test:${taito_env} client",
-    "test:function": "echo TODO test:function",
     "test:server": "taito util-test:${taito_env} server",
     "test:worker": "echo TODO test:worker",
     "analyze": "npm-run-all --parallel analyze:admin analyze:client",
