docs: Data protection checklist

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "analyze": "npm-run-all --parallel analyze:admin analyze:client",
     "analyze:admin": "cd admin && npm run analyze",
     "analyze:client": "cd client && npm run analyze",
-    "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
-    "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
+    "project-contacts": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
     "docs": "echo TODO: generate docs in package.json",
     "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
     "commit": "echo 'Running commitizen locally' && git-cz",
